--- a/spring/WebContent/WEB-INF/web.xml
+++ b/spring/WebContent/WEB-INF/web.xml
@@ -51,8 +51,7 @@
 	
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
-		<url-pattern>*.git</url-pattern>
-	</servlet-mapping>
-	
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>	
 
 </web-app>
